manifests/prod/project-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archgen-prod-project-service
  labels:
    app: project-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: archgen-prod-project-service-sa
      containers:
        - name: project-service
          image: "acrarchgenprod.azurecr.io/project-service:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8002
              protocol: TCP
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "archgen-prod-project-keyvault-provider"
