manifests/prod/architecture-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: archgen-prod-architecture-service
  labels:
    app: architecture-service
spec:
  type: ClusterIP
  ports:
    - port: 8003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: architecture-service
