manifests/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: archgen-prod-frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: frontend
