manifests/prod/project-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: archgen-prod-project-service
  labels:
    app: project-service
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: project-service
