manifests/prod/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archgen-prod-frontend-ingress
  labels:
    app: frontend
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/rule-type: path
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: frontend.archgen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archgen-prod-frontend
                port:
                  number: 80
