manifests/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod
  name: archgen-prod-ingress
  labels:
    app: unified-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-prod
  rules:
    - host: prod.archgen.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: archgen-prod-api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archgen-prod-frontend
                port:
                  number: 80
    - host: archgen.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: archgen-prod-api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archgen-prod-frontend
                port:
                  number: 80
    - host: frontend.archgen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archgen-prod-frontend
                port:
                  number: 80
    - host: api.archgen.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: archgen-prod-api-gateway
                port:
                  number: 8080
